# dmi-merge-tool

./: Cargo.toml  LICENSE  README.md
src/: main.rs
