[package]
name = "dmi-merge-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.14"

dmm-tools = { git = "https://github.com/SpaceManiac/SpacemanDMM/" }
dreammaker = { git = "https://github.com/SpaceManiac/SpacemanDMM/" }
lodepng = "3"
png = "0.17"

image = "0.24"
anyhow = "1"

